fix: removed out of place css

--- a/src/assets/sass/application.scss
+++ b/src/assets/sass/application.scss
@@ -761,10 +761,6 @@ td.RejectedStateDecoration div div div
   background: #ff6 !important;
 }
 
-ul.legend .button--link {
-  color:#333;
-}
-
 .keyShortcutPanel {
   @include transform(translateX(-50%));
   border: none !important;
